# chatgpt-avatar

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  flake8.ini  mypy.ini  pyproject.toml
chatgpt_avatar/: chatgpt_avatar.py
